# open-course-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  installer.sh  release-please-config.json
.claude/rules/: git.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: flow.md
docs/plans/: 2026-07-18-settings-ui-fixes.md
scripts/: debug_exercises.py
src/: app.rs  error.rs  lib.rs  main.rs  update.rs
src/app/: llm_results.rs  mod.rs
src/config/: migration.rs  mod.rs  profile.rs  provider.rs
src/core/: dashboard.rs  language.rs  mod.rs  session.rs
src/core/session/: apply.rs  mod.rs  models.rs  scoring.rs  topic_selection.rs
src/db/: curriculum.rs  history.rs  learning_items.rs  metadata.rs  mod.rs  progress.rs  reviews.rs  util.rs
src/llm/: analysis.rs  client.rs  curriculum.rs  debug_log.rs  diagnostics.rs  factory.rs  mod.rs  model_listing.rs  parse.rs  pipeline.rs  prompts.rs  provider.rs  retry.rs  streaming.rs  topic_review.rs  transport.rs
src/ui/: colors.rs  help.rs  labels.rs  mod.rs
src/ui/views/: curriculum.rs  dashboard.rs  docs.rs  mod.rs  model_check.rs  onboarding.rs  pairs.rs  report.rs  review.rs  session.rs  settings.rs  update.rs  utils.rs
src/ui/widgets/: activity_calendar.rs  activity_chart.rs  cards.rs  confirmation.rs  error_box.rs  footer.rs  help_overlay.rs  logo.rs  (+9 more)
tests/: config_test.rs  dashboard_test.rs  db_test.rs  debug_analysis.rs  debug_exercises.rs  layout_debug.rs  prompts_test.rs  session_test.rs  settings_layout_test.rs
(+8 files in other folders)
