[package]
name = "open-course-cli"
version = "0.5.1"
edition = "2024"

[dependencies]
# TUI
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-markdown = "0.3"

# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"

# LLM
rig-core = { version = "0.20", features = ["all", "reqwest-rustls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
bytes = "1"

# Database
lancedb = "0.29"
arrow-array = "58"
arrow-schema = "58"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utils
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
unicode-normalization = "0.1"
regex = "1"

[dev-dependencies]
tempfile = "3"
